# Dashboard-cam

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  index.html  requirements.txt
Dashboard Cam FBI/: package-lock.json  package.json
Dashboard Cam FBI/src/: index.html
Dashboard Cam FBI/src-tauri/: Cargo.toml  tauri.conf.json
Dashboard Cam FBI/src-tauri/src/: lib.rs  main.rs
catalog/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
catalog/src/: App.tsx  index.css  index.html  main.js  style.css
catalog/src-tauri/: Cargo.toml  tauri.conf.json
catalog/src-tauri/capabilities/: default.json
catalog/src-tauri/src/: lib.rs  main.rs
catalog/src/i18n/: config.ts  en.json  pt.json  ru.json
catalog/src/legacy/: index.html  main.js  style.css
catalog/src/services/: translate.ts
config/: go2rtc.yaml
database/: omni_cams.json
intelligence/: README.md  __init__.py  fbi_ingestion.py  intelligence_db.py  migrate_to_pg.py  populate_db.py  pyproject.toml
olho_de_deus/: README.md  alert_config.yaml  alert_dispatcher.py  api_server.py  asia_ingestion.py  audit_manager.py  audit_network.py  audit_report_full.md  backup_manager.py  behavior_pipeline.py  biometric_processor.py  bnmp_ingestion.py  cameras.json  delta_embedder.py  enrich_geo.py  extract_embeddings.py  farm_cams.py  farm_omni.py  farm_transito.py  fbi_ingestion.py  filter_elite.py  forensic_report.py  ghost_killswitch.py  global_ingestion.py  interpol_ingestion.py  live_pipeline.py  main.py  monitoring.html  opensanctions_ingestion.py  populate_db.py  professionalize_intel.py  pyproject.toml  redis_cache.py  run_global_intelligence.py  score_engine.py  test_confidence_calibration.py  test_e2e_encryption.py  us_local_ingestion.py  verify_integrity.py  verify_intel.py  (+1 more)
olho_de_deus/core/: ingestor.py  vector_cache.py
olho_de_deus/logs/: backup_index.json
olho_de_deus/yolov8n-pose_openvino_model/: metadata.yaml  yolov8n-pose.xml
olho_de_deus/yolov8n_openvino_model/: metadata.yaml
pesquisa/: Implementação Profissional de Detecção de Armas.txt  Live Camera Analysis Frontend Architecture.txt  Projeto Cams Mundiais_ Frontend e Tecnologias.txt
