[tool.poetry]
name = "olho-de-deus"
version = "10.0.0"
description = "Sistema de inteligência biométrica global — Fase 10: Parallel Ingestion"
authors = ["Douglas Scarello <douglasdsr@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.13.0.92"
yt-dlp = "^2026.2.21"
requests = "^2.32.5"
beautifulsoup4 = "^4.14.3"
playwright = "^1.58.0"
ultralytics = "^8.3.82"
deepface = "^0.0.93"
faiss-cpu = "^1.10.0"
tqdm = "^4.67.1"
aiohttp = "^3.10.0"
aiofiles = "^24.0.0"
tenacity = "^9.0.0"
insightface = "^0.7.3"
tf-keras = "^2.18.0"
lancedb = "^0.29.2"
psycopg2-binary = "^2.9.11"
python-dotenv = "^1.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
